[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bzapper"
version = "0.3.0"
description = "Official Python SDK for the bZapper WhatsApp gateway API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Berni Software", email = "vinicius@berni.com.br" }]
keywords = ["bzapper", "whatsapp", "sdk", "gateway", "messaging", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://bzapper.com.br"
Repository = "https://github.com/bernisoftware/bzapper"

[tool.hatch.build.targets.wheel]
packages = ["bzapper"]
